defmt/tests/ui/derive-transparent-multiple-fields.stderr
error: Transparent format can only be applied when all variants have exactly one field.
 --> tests/ui/derive-transparent-multiple-fields.rs:1:10
  |
1 | #[derive(defmt::Format)]
  |          ^^^^^^^^^^^^^
  |
  = note: this error originates in the derive macro `defmt::Format` (in Nightly builds, run with -Z macro-backtrace for more info)
